Correct alignment in club details page

--- a/games/static/games/css/games.css
+++ b/games/static/games/css/games.css
@@ -40,5 +40,4 @@
 .small-crest {
   height: 40px;
   width: auto;
-  horiz-align: right;
 }
